# rp2x_sim7080g

./: CMakeLists.txt  README.md
src/: rp2x_sim7080g.c  rp2x_sim7080g.h  rp2x_sim7080g_cell.c  rp2x_sim7080g_config.c  rp2x_sim7080g_mqtt.c  rp2x_sim7080g_power.c  sim7080g_defs.h
